--- a/Day10/django_project/ecommerce_website/templates/emails/otp_verification_mail.html
+++ b/Day10/django_project/ecommerce_website/templates/emails/otp_verification_mail.html
@@ -209,7 +209,7 @@
             <p>
                 <small>
                     This is an automated message. Please do not reply to this email.<br>
-                    If you have any questions, contact us at {{ support_email|default:'support@example.com' }}
+                    If you have any questions, contact us at djangoproject837@gmail.com
                 </small>
             </p>
         </div>
